--- a/.github/workflows/upadate-extension.yml
+++ b/.github/workflows/upadate-extension.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '16'  # Actualiza a Node.js 16 o superior
 
     - name: Install vsce
       run: npm install -g vsce
