--- a/.github/workflows/upadate-extension.yml
+++ b/.github/workflows/upadate-extension.yml
@@ -17,6 +17,8 @@ jobs:
 
     - name: Setup Node.js
       uses: actions/setup-node@v2
+      with:
+        node-version: '18'  # Actualiza a Node.js 16 o superior
 
     - name: Install vsce
       run: npm install -g vsce
