--- a/.github/workflows/upadate-extension.yml
+++ b/.github/workflows/upadate-extension.yml
@@ -1,44 +1,40 @@
-name: Publish Extension Pack
+name: Deploy VS Code Extension
 
 on:
   push:
-    branches:
-      - main  # Puedes ajustar la rama según tu flujo de trabajo
     tags:
-      - 'v*'  # Si prefieres que se publique solo cuando se cree un tag
+      - "*"
 
 jobs:
-  publish:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'  # Actualiza a Node.js 16 o superior
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-    - name: Install vsce
-      run: npm install -g vsce
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Set up Git for versioning
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
+      - name: Install vsce
+        run: npm install -g vsce
 
-    - name: Bump version and create a new tag
-      run: |
-        vsce version patch  # Cambiar a `minor` o `major` si es necesario
-        git commit -am "Bump version"
-        git tag v$(node -p -e "require('./package.json').version")
-        git push --tags
+      - name: Get version from package.json
+        id: get_version
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "VERSION=$VERSION" >> $GITHUB_ENV  # Guardar la versión como una variable de entorno
 
-    - name: Package Extension
-      run: vsce package
+      - name: Package extension
+        run: vsce package --out ismola-extension-pack-${{ env.VERSION }}.vsix  # Usa la versión dinámica en el nombre del archivo
 
-    - name: Publish Extension to VS Code Marketplace
-      env:
-        VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}  # Usa el token de tu secreto en GitHub
-      run: vsce publish
+      - name: Publish to Visual Studio Marketplace
+        uses: HaaLeo/publish-vscode-extension@v2
+        with:
+          pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
+          registryUrl: https://marketplace.visualstudio.com
+          extensionFile: ./ismola-extension-pack-${{ env.VERSION }}.vsix  # Usa la misma versión aquí
