--- a/.github/workflows/upadate-extension.yml
+++ b/.github/workflows/upadate-extension.yml
@@ -34,6 +34,6 @@ jobs:
       - name: Publish to Visual Studio Marketplace
         uses: HaaLeo/publish-vscode-extension@v2
         with:
-          pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
+          pat: ${{ secrets.VSCE_TOKEN }}
           registryUrl: https://marketplace.visualstudio.com
           extensionFile: ./ismola-extension-pack-${{ env.VERSION }}.vsix  # Usa la misma versión aquí
