--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "displayName": "Ismola Extension Pack",
     "description": "Un pack con las mejores extensiones para mejorar tu productividad y experiencia de desarrollo en Visual Studio Code. ¡Optimiza tu flujo de trabajo y trabaja de manera más eficiente!",
-    "version": "0.0.3",
+    "version": "1.0.0",
     "publisher": "ismola",
     "engines": {
         "vscode": "^1.80.0"
@@ -21,6 +21,7 @@
         "Gruntfuggly.todo-tree",
         "usernamehw.errorlens",
         "DavidAnson.vscode-markdownlint",
-        "eamodio.gitlens"
+        "eamodio.gitlens",
+        "mikestead.dotenv"
     ]
 }
